--- a/layouts/partials/frontpage/services.html
+++ b/layouts/partials/frontpage/services.html
@@ -3,9 +3,8 @@
 <section id="services" class="py-5">
 	<div class="container">
 		<h2 class="h-bg h-bg-big text-center"><span class="bg">{{ i18n "our" }}</span>Services</h2>
-            {{ with .Site.GetPage "frontpage/sections/services.md" }}
-                   {{ .Content }}
-            {{ end }}
+            {{ $headless := .Site.GetPage "/frontpage/sections" }}
+            {{ ($headless.Resources.GetMatch "services.md").Content }}
 			<div class="row justify-content-center mt-5">
 				<div class="col-md-6 col-lg-4 service_wrap">
 					<a href="#" class="service service_wh">
