Many localized files added

--- a/layouts/partials/frontpage/siries.html
+++ b/layouts/partials/frontpage/siries.html
@@ -17,7 +17,7 @@
                                  <div class="description">
                                        <h4 class="kontur-title">{{ ($headless1.Resources.GetMatch "kontur.md").Title | safeHTML }}</h4>
                                       {{ ($headless1.Resources.GetMatch "kontur.md").Content }}
-                                      <a href="#" class="btn btn-block green-btn">{{ i18n "moreDetails" }}</a>
+                                      <a  href="{{ relLangURL "products/kontur" }}" class="btn btn-block green-btn">{{ i18n "moreDetails" }}</a>
                                  </div>
                            </div>
 			</div>
@@ -31,7 +31,7 @@
                                 <div class="description">
                                       <h4 class="kontur-title">{{ ($headless1.Resources.GetMatch "kontur_start.md").Title | safeHTML }}</h4>
                                       {{ ($headless2.Resources.GetMatch "kontur_start.md").Content }}
-                                     <a href="#" class="btn btn-block green-btn">{{ i18n "moreDetails" }}</a>
+                                     <a  href="{{ relLangURL "products/kontur_start" }}" class="btn btn-block green-btn">{{ i18n "moreDetails" }}</a>
                                 </div>
                            </div>
 			</div>
@@ -45,7 +45,7 @@
                                 <div class="description">
                                       <h4 class="kontur-title">{{ ($headless3.Resources.GetMatch "kontur_rost.md").Title | safeHTML }}</h4>
                                       {{ ($headless2.Resources.GetMatch "kontur_rost.md").Content }}
-                                     <a href="#" class="btn btn-block green-btn">{{ i18n "moreDetails" }}</a>
+                                     <a href="{{ relLangURL "products/kontur_rost" }}" class="btn btn-block green-btn">{{ i18n "moreDetails" }}</a>
                                 </div>
                            </div>
 			</div>
@@ -59,7 +59,7 @@
                                 <div class="description">
                                       <h4 class="kontur-title">{{ ($headless4.Resources.GetMatch "kontur_antistress.md").Title | safeHTML }}</h4>
                                       {{ ($headless2.Resources.GetMatch "kontur_antistress.md").Content }}
-                                     <a href="#" class="btn btn-block green-btn">{{ i18n "moreDetails" }}</a>
+                                     <a href="{{ relLangURL "products/kontur_antistress" }}" class="btn btn-block green-btn">{{ i18n "moreDetails" }}</a>
                                 </div>
                            </div>
 			</div>
