--- a/layouts/_default/contacts.html
+++ b/layouts/_default/contacts.html
@@ -2,28 +2,28 @@
 
      <section class="py-5">
      <div class="container">
-             <h1> Contact us </h1>
+             <h1> {{ i18n "contactUs" }}</h1>
 
              {{ .Content }}
 
              <form class="py-5">
                     <div class="form-group">
-                            <label for="fname">Name</label>
-                            <input type="text" class="form-control" id="fname" name="firstname" placeholder="Your name..">
+                            <label for="fname">{{ i18n "name" }}</label>
+                            <input type="text" class="form-control" id="fname" name="firstname" placeholder="{{ i18n "yourNamePlaceholder" }}">
                     </div>
 
                     <div class="form-group">
-                            <label for="email">E-mail</label>
-                            <input type="text" class="form-control" id="email" name="lastname" placeholder="Your e-mail address..">
+                            <label for="email">{{ i18n "email" }}</label>
+                            <input type="text" class="form-control" id="email" name="lastname" placeholder="{{ i18n "yourEmailPlaceholder" }}">
                     </div>
 
                     
                     <div class="form-group">
-                            <label for="subject">Subject</label>
-                            <textarea id="subject" class="form-control" name="subject" placeholder="Write something.." style="height:200px"></textarea>
+                            <label for="subject">{{ i18n "subject" }}</label>
+                            <textarea id="subject" class="form-control" name="subject" placeholder="{{ i18n "writeSomethingPlaceholder" }}" style="height:200px"></textarea>
                     </div>
 
-                    <input type="submit" value="Submit">
+                    <input type="submit" value="{{ i18n "submit" }}">
 
           </form>
      </div>
