Phone settings moved to config.toml

--- a/layouts/partials/site_footer.html
+++ b/layouts/partials/site_footer.html
@@ -3,7 +3,7 @@
 		<div class="footer-wrap">
 			<div class="call">
 				<span>{{ i18n "giveUsACall" }}</span>
-				<a href="tel:{{ .Params.phoneInt }}">{{ .Params.phone }}</a>
+				<a href="tel:{{ $.Site.Params.phoneInt }}">{{ $.Site.Params.phone }}</a>
 			</div>
 			<div class="social">
 				<div class="icons">
