Feedback form is connected to getform.io

--- a/layouts/_default/contacts.html
+++ b/layouts/_default/contacts.html
@@ -6,7 +6,7 @@
 
              {{ .Content }}
 
-             <form class="py-5">
+             <form class="py-5" action="https://getform.io/f/aea0c9fe-fd5c-4378-a134-ef86bd9af2c0" method="POST">
                     <div class="form-group">
                             <label for="fname">{{ i18n "name" }}</label>
                             <input type="text" class="form-control" id="fname" name="firstname" placeholder="{{ i18n "yourNamePlaceholder" }}">
