--- a/layouts/partials/frontpage/advantages.html
+++ b/layouts/partials/frontpage/advantages.html
@@ -1,9 +1,9 @@
 <!-- TODO: add "benefits" to Data file -->
 <section id="advantages" class="py-5">
 	<div class="container">
-		<h2>Advantages <span>working with us</span></h2>
-            {{ $headless := .Site.GetPage "/frontpage/sections" }}
-            {{ ($headless.Resources.GetMatch "advantages.md").Content }}
+          {{ $headless := .Site.GetPage "/frontpage/sections" }}
+		<h2>{{ ($headless.Resources.GetMatch "advantages.md").Title | safeHTML}}</h2>
+          {{ ($headless.Resources.GetMatch "advantages.md").Content }}
 		<div class="row justify-content-center">
 			<div class="col-6 col-md-4 col-lg-3 col-xl-2">
 				<div class="advantage">
