Minor changes in site header and footer

--- a/layouts/partials/site_footer.html
+++ b/layouts/partials/site_footer.html
@@ -16,8 +16,8 @@
 				</div>
 			</div>
 			<div class="contacts">
-				<p>Address: 105318, Srbija</p>
-				<p>E-mail: <a href="mailto:info@aeolus_123">info@aeolus_123</a></p>
+				<p>Address: 21000, Vojvodjanskih Brigada 22-44, Novi Sad, Srbija</p>
+				<p>E-mail: <a href="mailto:office@aeolus.rs">office@aeolus.rs</a></p>
 			</div>
 		</div>
 	</div>
