--- a/layouts/partials/site_header.html
+++ b/layouts/partials/site_header.html
@@ -14,7 +14,7 @@
 		</div>
 	</div>
 	<div class="container">
-		<a class="navbar-brand" href="#">
+		<a class="navbar-brand" href="/">
 			<img src="{{ "images/dest/logo.png" | relURL }}" width="180" alt="" title="" loading="lazy">
 		</a>
 		<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#mainnavbar" aria-controls="mainnavbar" aria-expanded="false" aria-label="Toggle navigation">
